package stanford.infolab.debugger;

message GiraphScenario {
  required bytes vertexId = 1;
  repeated bytes nbrs = 2;
  required bytes vertexValue = 3;
  repeated bytes messages = 4;
}
